k8s/apps/coming-soon/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coming-soon
spec:
  replicas: 2
  selector:
    matchLabels:
      app: coming-soon
  template:
    metadata:
      labels:
        app: coming-soon
    spec:
      containers:
        - name: nginx
          image: nginx:stable
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
      volumes:
        - name: html
          configMap:
            name: coming-soon-html
