k8s/apps/coming-soon/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coming-soon
spec:
  type: ClusterIP
  selector:
    app: coming-soon
  ports:
    - name: http
      port: 80
      targetPort: 80
