k8s/apps/coming-soon/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coming-soon
  namespace: coming-soon
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:542586609371:certificate/e8736cd9-54b9-4870-b4f5-169c26054f9d
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
  ingressClassName: alb
  rules:
    - host: cardticker.ai
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: coming-soon
                port:
                  number: 80
